syntax = "proto3";
package online;
option go_package = "rpc/online/pb;online_service";

message EmptyRequest {
}

message OnlineResponse {
  repeated int64 uids = 1;
  int64 count = 2;
}

message OnlineRequest {
  int64 uid = 1;
}

message EmptyResponse {
}

service OnlineServer {
  rpc StartUp(OnlineRequest) returns(EmptyResponse);
  rpc Shutdown(OnlineRequest) returns(EmptyResponse);
  rpc GetOnlineAll(EmptyRequest) returns(OnlineResponse);
}